err/string-demon.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/regex-2016.1.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.10.0.dist-info'...
Listing './lib/python3.5/site-packages/string_demon'...
Compiling './lib/python3.5/site-packages/string_demon/commons.py'...
***   File "./lib/python3.5/site-packages/string_demon/commons.py", line 96
    print " c2 = (%d, '%s') and c1 = (%d, '%s')  " % (c2, W2, c1, W1)
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/string_demon/extract.py'...
***   File "./lib/python3.5/site-packages/string_demon/extract.py", line 46
    print '%d emails extracted to .csv' % len(extracted_data)
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/string_demon/wu_manber.py'...
***   File "./lib/python3.5/site-packages/string_demon/wu_manber.py", line 28
    print "[error]WM.Hash,string", string, item
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/string_demon-0.2.50.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
